--- a/conf/database.yaml.template
+++ b/conf/database.yaml.template
@@ -1,7 +1,7 @@
 defaults: &defaults
   encoding: unicode
   adapter:  postgresql
-  host:     database
+  host:     localhost
   database: dgidb
   port:     5432
   pool:     10
